--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -5,14 +5,11 @@ on:
     branches:
       - main
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 jobs:
-  docs:
+  pages:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
