--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Prepare
         run: |
           echo "XML" > data/index.html
-          find data -type d -exec sh -c 'ls "{}" > "{}/index"' \;
+          find data -type d -exec sh -c 'ls -1p "{}" > "{}/.index"' \;
 
       - name: Publish
         uses: peaceiris/actions-gh-pages@v4.0.0
